--- a/stocks.scss
+++ b/stocks.scss
@@ -8,12 +8,22 @@ body {
 }
 
 .stock {
+	background: white;
 	border-top: 1px solid silver;
   	padding: 5px 0px; 
   	width: 100%;
+  	opacity: 1;
   	transition: all 0.5s ease;
 }
 
 .stock-hidden {
 	display: none;
+}
+
+.stock-price-up {
+	background: linear-gradient(to right, white, green);
+}
+
+.stock-price-down {
+	background: linear-gradient(to right, white, red);
 }
